# serverwave-anywhere

./: .gitignore  BUILD.md  LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: docker.rs  files.rs  games.rs  mod.rs  server.rs
src-tauri/src/docker/: manager.rs  mod.rs
src-tauri/src/games/: config.rs  config_processor.rs  manager.rs  mod.rs
src/components/: ConsoleOutput.tsx  DeleteConfirmDialog.tsx  DockerRequired.tsx  FileManager.tsx  GameIcon.tsx  ServerCard.tsx  Sidebar.tsx  TitleBar.tsx
src/pages/: CreateServer.tsx  Games.tsx  Home.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx
src/stores/: dockerStore.ts  gamesStore.ts  serverStore.ts
src/types/: index.ts
src/utils/: gameTypes.ts
